# meteo-rs

./: Cargo.toml
bme680-rs/: Cargo.toml  LICENSE
bme680-rs/src/: aqi.rs  calc.rs  delay.rs  i2cutil.rs  lib.rs  settings.rs
firmware/: Cargo.toml
firmware/src/: byteswriter.rs  decimal.rs  lib.rs  slicewriter.rs  stringwriter.rs
m1284p-firmware/: .gitmodules  Cargo.toml  rust-toolchain.toml  upload.sh
m1284p-firmware/.cargo/: config.toml
m1284p-firmware/src/: main.rs
stm32f4-firmware/: Cargo.toml  flash.sh  memory.x
stm32f4-firmware/src/: main.rs
