[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
display-interface = { version = "0", default-features = false }
embedded-hal = { version = "1", default-features = false }
embedded-graphics = { version = "0", default-features = false }
ufmt = { version = "0", default-features = false }
num-traits = { version = "0", default-features = false }
ssd1306 = { version = "0", default-features = false, features = ["graphics"] }

[dependencies.bme680-rs]
path = "../bme680-rs"
default-features = false